# cubr

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/cubr/: Cargo.toml  README.md
crates/cubr-core/: Cargo.toml  README.md
crates/cubr-core/src/: core.rs  lib.rs  model.rs
crates/cubr-core/src/solver/: coords.rs  facelet.rs  mod.rs  pdb.rs  search.rs  two_phase.rs
crates/cubr-core/tests/: bench_solve.rs
crates/cubr/src/: main.rs  solve_ui.rs  swipe.rs
crates/cubr/src/api/: server.rs  types.rs
crates/cubr/src/cube/: animation.rs  mod.rs  spawn.rs
src/: camera.rs  geom.rs  main.rs  solve_ui.rs  solver.rs  swipe.rs  ui.rs  view_relative.rs
src/api/: mod.rs  server.rs  types.rs
src/cube/: animation.rs  core.rs  mod.rs  model.rs  spawn.rs
src/solver/: cache.rs  coords.rs  mod.rs  pdb.rs  search.rs
