[package]
name = "cubr"
version = "0.1.0"
edition = "2021"
description = "Interactive 3x3x3 Rubik's cube in Bevy, with a guaranteed-optimal solver and a local HTTP control API"
license = "MIT"
repository = "https://github.com/buzzlightyear1309/cubr"

[dependencies]
bevy = "0.18"
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kewb = "0.4"

# Faster incremental builds during development.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
