[workspace]
resolver = "2"
members = ["crates/cubr-core", "crates/cubr"]
# No default-members: a bare `cargo test` covers BOTH crates (we want
# cubr-core's pure tests to run by default). `cargo run` is disambiguated
# with `-p cubr` (the virtual workspace has no root package).

# Profiles only take effect at the workspace root, so the dev opt-level
# tuning for faster incremental Bevy builds lives here.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
