[workspace]
resolver = "2"
members = ["crates/cubr-core", "crates/cubr"]
# No default-members: a bare `cargo test` covers BOTH crates (we want
# cubr-core's pure tests to run by default). `cargo run` is disambiguated
# with `-p cubr` (the virtual workspace has no root package).

# Profiles only take effect at the workspace root, so the dev opt-level
# tuning for faster incremental Bevy builds lives here.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# The `"*"` glob above tunes *dependencies* only, not workspace members, so the
# solver crate would otherwise compile at the `[profile.dev]` opt-level = 1 — far
# too slow for its hot IDA* / pattern-DB number-crunching. Pin it to full
# optimization even in dev builds (it's small and rarely edited, so the extra
# compile time is negligible) so `cargo run` / `cargo test` solve at real speed.
[profile.dev.package.cubr-core]
opt-level = 3
